Corrected screen margin to get rid of white space at top of page

--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@ body, html {
     padding: 0px;
 }
 
+* {
+    margin: 0px;
+}
+
 h1, form, h3 {
     text-align:center;
 }
